Add bug 12
